ta1/Grammar1
stmt  : assn ';'
assn  : id '=' expr
expr  : term addop expr
      | term
term  : fact mulop term
      | fact
fact  : id 
      | num
      | '(' expr ')'
      | '-''(' expr ')'
addop : '+'
      | '-'
mulop : '*'
      | '/'
